# perception_ros

./: CMakeLists.txt  package.xml
backupcode/include/perception/: config.h  point_cloud_register.h
backupcode/src/: basic_viewer_sample.cpp  config.cpp  point_cloud_register.cpp  run_apps.cpp  run_pc_reg.cpp  run_whole_reg_pc.cpp
data/: c_big1.pcd  c_big2.pcd  c_s1.pcd  c_s1_c.pcd  c_s2.pcd  c_s2_c.pcd  merged_1.pcd
data/complete_crown_scan/: crown.pcd  merged_1.pcd  s1.pcd  s2.pcd  s3.pcd  s4.pcd  s5.pcd
data/old_big_crown/: 1.pcd
include/mUtils/: mFunctions.h  noise_reduce.h
include/pcReg/: point_cloud_register.h
launch/: register_pc_stl.launch  register_point_cloud.launch  test_big.launch
readme/: cmd.txt
src/: pcl_converter.cpp  prerejective_align.cpp  run_apps.cpp  test_fpcs_ia.cpp
src/apps/pcReg/: align_icp.cpp  align_prerejective.cpp  load_parameters.cpp  load_pc.cpp  run_register.cpp
src/mUtils/: mFunctions.cpp  noise_reduce.cpp
